# Chordia_Windows_Portable

./: .gitignore  README.md  update.log.txt
app/: add_music.html  api.html  export.html  extensions.html  import.html  index.html  info.html  lyrics.html  manage.html  mini_player.html  player.html  settings.html
app/css/manage/: modal.css
app/css/player/: main_view.css
app/js/: export.js  extensions.js  import.js  script.js  settings.js  theme.js
app/js/add-music/: artwork.js  bulk_action.js  duplicate_check.js  source.js  submit_process.js  tags_autocomplete.js  utils.js
app/js/api/: api.js
app/js/manage/: modal.js  player.js  table.js
app/js/player/: globals.js  header.js  main.js  main_view.js  mini_player.js  modal_song_select_core.js  modal_song_select_ui.js  player_control.js  sidebar_core.js  sidebar_smart.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: @cmd_core.rs  @models.rs  cmd_add_music.rs  cmd_db.rs  cmd_history.rs  cmd_library.rs  cmd_player.rs  cmd_playlist.rs  cmd_settings.rs  cmd_window.rs  commands.rs  main.rs  models.rs  types.rs  utils.rs
src-tauri/userfiles/: settings.ini
v2.3.1_Windown_Portable/: main.py
v2.4.0_Windown_Portable/: main.py
v2.4.0_Windown_Portable/app/: lyrics.html  mini_player.html  player.html  settings.html
v2.5.0_Windown_Portable/: main.py
v2.5.0_Windown_Portable/app/: add_music.html  import.html  player.html
v2.5.0_Windown_Portable/app/js/: import.js
v2.6.2_Windown_Portable/: main.py
v2.6.3_Windown_Portable/: main.py
v2.6.3_Windown_Portable/app/: api.html  manage.html
(+11 files in other folders)
